manifest/admissionwebhook/webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diyadmissionwebhook
  namespace: test
  labels:
    app: diyadmissionwebhook
spec:
  replicas: 1
  template:
    metadata:
      name: diyadmissionwebhook
      labels:
        app: diyadmissionwebhook
    spec:
      containers:
        - name: diyadmissionwebhook
          image: naison/admissionwebhook:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
          ports:
            - containerPort: 80
              protocol: TCP
      volumes:
        - name: webhook-certs
          secret:
            secretName: webhook-secret
      restartPolicy: Always
  selector:
    matchLabels:
      app: diyadmissionwebhook
---
apiVersion: v1
kind: Service
metadata:
  name: diyadmissionwebhook
  namespace: test
spec:
  selector:
    app: diyadmissionwebhook
  ports:
    - port: 80
  type: NodePort
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: diyadmissionwebhook
  namespace: test
  labels:
    app: diyadmissionwebhook
webhooks:
  - name: diyadmissionwebhook.test.svc
    clientConfig:
      service:
        name: diyadmissionwebhook
        namespace: test
        path: "/mutating-pods"
        port: 80
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5akNDQWJJQ0NRREhUeDl0V2ZXVlVqQU5CZ2txaGtpRzl3MEJBUXNGQURBbk1TVXdJd1lEVlFRRERCeGsKYVhsaFpHMXBjM05wYjI1M1pXSm9iMjlyTG5SbGMzUXVjM1pqTUI0WERUSXhNRE15TURFd01qUXpObG9YRFRNeApNRE14T0RFd01qUXpObG93SnpFbE1DTUdBMVVFQXd3Y1pHbDVZV1J0YVhOemFXOXVkMlZpYUc5dmF5NTBaWE4wCkxuTjJZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNQ2txb3gybUgyZE5sYVQKSUtzZ3pCZDErTzFnY0tBUDhyRlJoZVNhMlc3Z1FCc3lNeUp6Y3JsZG1QdTlkVzJFZFBkd1FGWndwY1JZNWZ6cQp2RGRkU2t6OG42 [...]
    rules:
      - apiGroups: [ "apps" ]
        apiVersions: [ "v1" ]
        operations: [ "CREATE","UPDATE" ]
        resources: [ "deployments" ]
        scope: "*"
    namespaceSelector:
      matchLabels:
        inject-empty-container: enabled
    admissionReviewVersions: [ "v1" ]
    sideEffects: "NoneOnDryRun"
  - name: diyadmissionwebhook.test.svc1
    admissionReviewVersions: [ "v1" ]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5akNDQWJJQ0NRREhUeDl0V2ZXVlVqQU5CZ2txaGtpRzl3MEJBUXNGQURBbk1TVXdJd1lEVlFRRERCeGsKYVhsaFpHMXBjM05wYjI1M1pXSm9iMjlyTG5SbGMzUXVjM1pqTUI0WERUSXhNRE15TURFd01qUXpObG9YRFRNeApNRE14T0RFd01qUXpObG93SnpFbE1DTUdBMVVFQXd3Y1pHbDVZV1J0YVhOemFXOXVkMlZpYUc5dmF5NTBaWE4wCkxuTjJZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNQ2txb3gybUgyZE5sYVQKSUtzZ3pCZDErTzFnY0tBUDhyRlJoZVNhMlc3Z1FCc3lNeUp6Y3JsZG1QdTlkVzJFZFBkd1FGWndwY1JZNWZ6cQp2RGRkU2t6OG42 [...]
      service:
        name: diyadmissionwebhook
        namespace: test
        path: "/mutating-service"
        port: 80
    rules:
      - apiGroups: [ "apps" ]
        apiVersions: [ "v1" ]
        operations: [ "CREATE","UPDATE" ]
        resources: [ "services" ]
        scope: "*"
    sideEffects: "NoneOnDryRun"
    namespaceSelector:
      matchLabels:
        inject-empty-container: enabled
